# arc-kit

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md
arc-cli/: Cargo.toml
arc-cli/src/: app.rs  cli.rs  display.rs  format.rs  lib.rs  main.rs
arc-cli/src/commands/: apply.rs  arc_toml_wizard.rs  common.rs  edit.rs  market.rs  mcp.rs  mod.rs  provider.rs  provider_lines.rs  skill.rs  status.rs  subagent.rs
arc-cli/tests/: cli_smoke.rs  project_config.rs
arc-core/: Cargo.toml
arc-core/built-in/mcp/: presets.toml
arc-core/src/: backup.rs  capability.rs  detect.rs  engine.rs  error.rs  git.rs  io.rs  lib.rs  mcp_registry.rs  models.rs  paths.rs  status.rs  subagent_registry.rs
arc-core/src/adapters/: base.rs  mod.rs  registry.rs
arc-core/src/agent/: mod.rs
arc-core/src/capability/: agent_config.rs  model.rs  storage.rs  validate.rs
arc-core/src/market/: bootstrap.rs  catalog.rs  document.rs  git_url.rs  index.rs  mod.rs  scanner.rs  sources.rs
arc-core/src/project/: apply.rs  discover.rs  file.rs  mod.rs  resolve.rs
arc-core/src/provider/: claude.rs  codex.rs  list_lines.rs  mod.rs  test.rs
arc-core/src/skill/: builtin.rs  local.rs  merge.rs  mod.rs  registry.rs  sync.rs  tracking.rs
arc-core/src/status/: actions.rs  agents.rs  capabilities.rs  (+2 more)
arc-core/tests/: backup_tests.rs  bootstrap_tests.rs  capability_tests.rs  catalog_tests.rs  detect_tests.rs  document_tests.rs  git_tests.rs  git_url_tests.rs  index_tests.rs  install_engine_tests.rs  io_tests.rs  models_tests.rs  paths_tests.rs  project_apply_tests.rs  provider_tests.rs  scanner_tests.rs  skill_builtin_tests.rs  skill_local_tests.rs  skill_registry_tests.rs  skill_sync_tests.rs  sources_tests.rs  subagent_builtin_tests.rs  tracking_recovery_tests.rs
(+41 files in other folders)
