[workspace]
members = [
    "arc-core",
    "arc-cli",
    "arc-tui",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "2026.4.16"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
console = "0.16"
dialoguer = "0.12"
dirs = "6.0"
fuzzy-matcher = "0.3"
once_cell = "1.21"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tempfile = "3.19"
thiserror = "2.0"
toml = "0.9"
ureq = "2.12"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
