[package]
name = "arc-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "arc"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
arc-core = { path = "../arc-core" }
arc-tui = { path = "../arc-tui" }
clap.workspace = true
clap_complete.workspace = true
console.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
log.workspace = true
env_logger.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
