[package]
name = "arc-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
dirs.workspace = true
include_dir = "0.7.4"
once_cell.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
thiserror.workspace = true
toml.workspace = true
ureq.workspace = true
log.workspace = true
chrono.workspace = true
console.workspace = true
